# url-shortner

./: .gitignore  .vercelignore  Cargo.toml  vercel.json
api/: [code].rs  index.rs  shorten.rs
src/: lib.rs  main.rs
src/api/: index.rs
src/shortner/: db.rs  mod.rs  url.rs
