[package]
name = "url-shortner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.206", features = ["derive"] }
serde_json = "1.0.122"
rand = "0.8.5"
sled = "0.34"
clap = { version = "4", features = ["derive"] }