[package]
name = "url-shortner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.206", features = ["derive"] }
serde_json = "1.0.122"
rand = "0.8.5"
sled = "0.34"
clap = { version = "4", features = ["derive"] }
actix-web = "4"
vercel_runtime = "1.1.3"
tokio = { version = "1", features = ["macros"] }
url = "2.5.2"

[lib]
path = "src/lib.rs"

[[bin]]
name = "shorten"
path = "api/shorten.rs"

[[bin]]
name = "_code_"
path = "api/[code].rs"

[dev-dependencies]
tempfile = "3.3"